--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <link rel="stylesheet" href="./style.css" />
   </head>
-  <body>
+  <body id="body">
     <!-- ********* NAVBAR ******** -->
     <nav class="navbar navbar-expand-md navbar-light fs-4">
       <div class="container-fluid">
@@ -456,7 +456,12 @@
         <p class="h6 text-light">© 2023 Copyright by Clarusway</p>
       </div>
     </footer>
+ <!-- UP-BTN -->
+ <a class="btn-up" href="#body">
+  <i class="fas fa-arrow-up"></i>
+</a>
 
+<script src="./lib/fslightbox.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
