--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
             <i class="fa-brands fa-instagram"></i>
           </li>
         </ul>
-        <p class="h6 text-light">© 2023 Copyright by Clarusway</p>
+        <p class="h6 text-light">© 2023 by ilkaybasboga</p>
       </div>
     </footer>
  <!-- UP-BTN -->
